# xhzy-learning

./: VideoCutter.cpp  VideoCutter.h  ffmpeg encode  ffmpeg_learning  skia_learning
TimeLine/: CMakeLists.txt  clock_darwin.h  clock_darwin.mm  main.cpp  time_line.cpp  time_line.h  time_period.cpp  time_period.h  time_point.cpp  time_point.h  wakeable.h
特效/ancient/: DVtexture.glsl  Monitoring.glsl  RainbowScreen.glsl  chromatism.glsl
特效/basic/: CamaraGrad.glsl  Crack.glsl  CurtainUp1.glsl  CurtainUp2.glsl  HeartBeatFrame.glsl  Shake.glsl  TheEnd.glsl  TurnToClearness.glsl  TurnToColours.glsl  TurnToGray.glsl
特效/innervation/: VideoDivision.glsl
转场/: Down.glsl  Right-Down.glsl  Up.glsl
